Fix horizontal scrolling on create bounty and account settings page.

--- a/src/containers/Settings/Settings.module.scss
+++ b/src/containers/Settings/Settings.module.scss
@@ -34,8 +34,8 @@
   display: block;
   border-top: $base-border;
   text-align: center;
-  margin-left: -$l-spacing;
-  margin-right: -$l-spacing;
+  margin-left: -$m-spacing;
+  margin-right: -$m-spacing;
   padding-top: $xl-spacing;
   padding-bottom: $xl-spacing;
   margin-bottom: -$m-spacing;
